--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             left: 0;
             width: 100%;
             height: 100vh;
-            background-color: #062250;
+            background: url('fundo.jpg') no-repeat center center;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
