--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             max-height: 70vh;
             opacity: 1;
             transition: opacity 1s ease-out;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            /* Removido o box-shadow conforme solicitado */
         }
 
         /* Page 2 - Start Screen */
@@ -70,13 +70,11 @@
             font-family: 'Franklin Gothic Demi', sans-serif;
             font-size: 1.5rem;
             cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.2s;
         }
 
         .start-button:hover {
             transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
         /* Page 3 - Quiz */
@@ -98,6 +96,24 @@
             left: 20px;
             width: 100px;
             max-width: 25%;
+            z-index: 10; /* Garante que a logo fique acima de outros elementos */
+        }
+
+        /* Barra de progresso ajustada */
+        .progress-container {
+            width: 80%;
+            background-color: #F4F1EC;
+            border-radius: 10px;
+            margin: 60px 0 20px 0; /* Ajuste das margens */
+            height: 6px; /* Altura reduzida */
+            overflow: hidden;
+        }
+
+        .progress-bar {
+            height: 100%;
+            background-color: #10C894;
+            width: 0%;
+            transition: width 0.5s ease;
         }
 
         .quiz-container {
@@ -108,7 +124,6 @@
             max-width: 800px;
             position: relative;
             margin-bottom: 30px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
         .question-header {
@@ -118,7 +133,6 @@
             margin-top: -40px;
             margin-bottom: 20px;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .question-header h2 {
@@ -148,7 +162,6 @@
             justify-content: center;
             align-items: center;
             transition: transform 0.2s;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
         .audio-controls button:hover {
@@ -198,7 +211,14 @@
             font-size: 1.2rem;
             margin-bottom: 20px;
             text-align: center;
-            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Botão VERIFICAR centralizado */
+        .check-button-container {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            margin-bottom: 20px;
         }
 
         .check-button {
@@ -211,8 +231,6 @@
             font-size: 1rem;
             cursor: pointer;
             transition: transform 0.2s;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .check-button:hover {
@@ -225,6 +243,7 @@
             padding: 15px;
             margin-bottom: 20px;
             display: none;
+            text-align: center; /* Texto centralizado */
         }
 
         .correct-answer {
@@ -233,12 +252,14 @@
             font-weight: bold;
             margin-bottom: 10px;
             color: #002F6C;
+            text-align: center; /* Texto centralizado */
         }
 
         .translation {
             font-family: 'Bogart', sans-serif;
             font-size: 1rem;
             color: #6C4500;
+            text-align: center; /* Texto centralizado */
         }
 
         .translation .main {
@@ -282,22 +303,6 @@
             max-width: 25%;
         }
 
-        .progress-container {
-            width: 100%;
-            background-color: #F4F1EC;
-            border-radius: 10px;
-            margin: 20px 0;
-            height: 10px;
-            overflow: hidden;
-        }
-
-        .progress-bar {
-            height: 100%;
-            background-color: #10C894;
-            width: 0%;
-            transition: width 0.5s ease;
-        }
-
         .navigation-buttons {
             display: flex;
             justify-content: center;
@@ -316,7 +321,6 @@
             font-size: 1rem;
             cursor: pointer;
             transition: transform 0.2s;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .nav-button:hover {
@@ -339,7 +343,6 @@
             text-align: center;
             color: white;
             margin-bottom: 30px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
         .results-title {
@@ -371,7 +374,6 @@
             cursor: pointer;
             transition: transform 0.2s;
             margin-top: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .repeat-button:hover {
@@ -523,7 +525,9 @@
                 <input type="text" class="user-input" id="userInput" placeholder="Digite a palavra que ouviu">
             </div>
 
-            <button class="check-button" id="checkButton">VERIFICAR</button>
+            <div class="check-button-container">
+                <button class="check-button" id="checkButton">VERIFICAR</button>
+            </div>
 
             <div class="translation-container" id="translationContainer">
                 <div class="correct-answer" id="correctAnswer"></div>
@@ -951,7 +955,7 @@
         repeatButton.addEventListener('click', startReview);
 
         playButton.addEventListener('click', () => {
-            buttonSound.play();
+            // Removido o buttonSound.play() conforme solicitado
             currentAudio.play();
             playButton.classList.add('pulse');
         });
