--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
         <h1 class="results-title" id="resultsTitle"></h1>
         <p class="results-message" id="resultsMessage"></p>
         <img class="results-mascot" id="resultsMascot" src="" alt="Mascote">
-        <button class="repeat-button" id="repeatButton">REPETIR ERROS</button>
+        <button class="repeat-button" id="repeatButton">REPETIR EXERCÍCIO</button>
     </div>
 
     <!-- Audio elements -->
